--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,20 @@
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#size-selector {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
 #container {
-    height: 960px;
-    width: 960px;
+    height: 600px;
+    width: 600px;
     display: grid;
     border: 1px solid black;
 }
